[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "ruythcore"
description = "A Python Discord Bot"
readme = { file = "README.md", content-type = "text/x-md" }
license = { file = "LICENSE" }
requires-python = ">=3.8"
authors = [{ name = "ruythbot_huy" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dynamic = ["version", "dependencies"]

[project.optional-dependencies]
docs = [
    "sphinx==4.4.0",
    "sphinxcontrib_trio==1.1.2"
    "sphinxcontrib-websupport==1.2.4",
    "sphinxcontrib-applehelp==1.0.4",
    "sphinxcontrib-devhelp==1.0.2",
    "sphinxcontrib-htmlhelp==2.0.1",
    "sphinxcontrib-jsmath==1.0.0",
    "sphinxcontrib-qthelp==1.0.3",
    "sphinxcontrib-serializinghtml==1.1.5",
    "typing-extensions>=4.3,<5",
    "sphinx-inline-tabs==2023.4.21",
    # TODO: Remove this when moving to Sphinx >= 6.6
    "imghdr-lts==1.0.0; python_version>='3.13'",
]

[project.urls]
Documentation = "https://docsruythcore.blogspot.com/"
"Issue tracker" = "https://github.com/huy746/ruyth-core/issues"

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }

[tool.setuptools]
packages = [
    "ruythcore",
]
include-package-data = true
