[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "ruythcore"
version = "0.1.0"
description = "A Python Discord Bot"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
requires-python = ">=3.8"
authors = [{ name = "ruythbot_huy" }]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

dynamic = ["dependencies"]

[project.optional-dependencies]
docs = [
    "sphinx==4.4.0",
    "sphinxcontrib_trio==1.1.2"
]

test = [
    "pytest",
    "pytest-cov",
]

[project.urls]
Documentation = "https://docsruythcore.blogspot.com/"
"Issue tracker" = "https://github.com/huy746/ruyth-core/issues"


[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }

[tool.setuptools.packages.find]
include = ["ruythcore"]
